--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -8,6 +8,7 @@ vagrantfile:
         cpus: '1'
         chosen_provider: virtualbox
         network:
+            public_network: 192.168.1.200
             private_network: 192.168.50.100
             forwarded_port:
                 vflnp_k0nlxdpl9gfc:
@@ -102,7 +103,7 @@ nginx:
             server_name: pet.unit-dev.com
             server_aliases:
                 - www.pet.unit-dev.com
-            www_root: /var/www/pet
+            www_root: /var/www/web
             listen_port: '80'
             index_files:
                 - index.html
