--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -8,7 +8,7 @@ vagrantfile:
         cpus: '1'
         chosen_provider: virtualbox
         network:
-            public_network: 192.168.1.200
+            public_network: ~
             private_network: 192.168.50.100
             forwarded_port:
                 vflnp_k0nlxdpl9gfc:
@@ -48,7 +48,7 @@ vagrantfile:
                         - '--archive'
                         - '-z'
                     exclude:
-                        - .vagrant/
+                        - vagrant/
                         - .git/
                     auto: 'true'
                 owner: www-data
