Config file was changed. Added file path

--- a/puphpet/config.yaml
+++ b/puphpet/config.yaml
@@ -73,6 +73,8 @@ server:
     packages:
         - git
         - mc
+        - npm
+
 users_groups:
     install: '1'
     groups: {  }
@@ -259,8 +261,9 @@ python:
     packages: {  }
     versions: {  }
 nodejs:
-    install: '0'
-    npm_packages: {  }
+    install: '1'
+    npm_packages:
+        - bower
 hhvm:
     install: '0'
     nightly: 0
